# Machine-Learning-Connect-Four

./: .gitignore  C-nnectFourDesign.md  CMakeLists.txt  Presentation.ipynb  README.md  todo.md
Reports/Abstract/: abstract.tex
Reports/Final_Report/: final_report.aux  final_report.out  final_report.tex  final_report.toc
Reports/Proposal/: Proposal  Proposal.tex
bash/: .autorun_game.sh.swp  autorun_game.sh
cpp/: .gitignore  makefile
cpp/inc/: constants.h  game_board.h  human_player.h  minimax_player.h  player.h  random_player.h
cpp/src/: driver.cpp  game_board.cpp  human_player.cpp  minimax_player.cpp  player.cpp  random_player.cpp
data/: 5v5.txt  5vR.csv  6v6.txt  6vR.csv  7v7.txt  8v8.txt  9v9.txt  RvR.csv  dearlordpleasework.csv  jdata.csv
py/: game.py  minimax.py  settings.py  supervised_net.py
src/: Players.py  Presentation.aux  Presentation.ipynb  Presentation.out  Presentation.tex  autorun_it_plz.py  game.py  minimax.py  out.test  players.py  practice.sav  settings.py  supervised_net.py
trained_networks/: 4vR.sav  5vR.sav  6vR.sav  6vRMini1000.sav  6vRlessnodes.sav  6vRliterally10nodes.sav  6vRliterally4nodes.sav  RvR.sav  practice.sav
